# MIDIRouter

./: CMakeLists.txt
Apps/: CMakeLists.txt
Apps/GuiAppTemplate/: CMakeLists.txt  CommonHeader.h  ConnectionDescription.h  ConnectionsMenu.h  ConnectionsWindow.h  Helpers.h  LiveConnection.h  Main.cpp  MenuLookAndFeel.h  Router.h  State.h  TrayIcon.h
Apps/GuiAppTemplate/Source/: CommonHeader.h  MainComponent.cpp  MainComponent.h
Apps/GuiAppTemplate/Window/: Main.cpp  MainWindow.h
Apps/IconGenerator/: CMakeLists.txt  Main.cpp
Apps/MIDIRouter/: AppInfo.plist  CMakeLists.txt  CommonHeader.h  ConnectionDescription.h  LiveConnection.h  Main.cpp  Router.h  State.h  TrayIcon.h
Apps/MIDIRouter/Native/: WakeListener.cpp  WakeListener.h  WakeListener.mm
CMake/: FindJSON.cmake  FindRTMidi-Interface.cmake  Findjuce.cmake  Utils.cmake  Warnings.cmake
Modules/: CMakeLists.txt
Modules/ea_midirouter_ui_utils/: ea_midirouter_ui_utils.cpp  ea_midirouter_ui_utils.h
Modules/ea_midirouter_ui_utils/Source/: TrayIcon.cpp  TrayIcon.h
